--- a/STUDENT-INFO/PUBLIC/style.css
+++ b/STUDENT-INFO/PUBLIC/style.css
@@ -5,10 +5,12 @@
 }
 
 html, body {
-    font-family: Arial, sans-serif;
-    width: 400px;
-    margin: auto;
-    padding-top: 40px;
+    height: 100%;
+    width: 100%;
+}
+.main{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    text-transform: capitalize;
 }
 
 input, button {
@@ -31,4 +33,23 @@ button:hover {
 
 #studentList {
     margin-top: 20px;
+}
+.nav{
+    width: 100%;
+    height: 100px;
+    background-color: black;
+    color: white;
+    display: flex;
+    justify-content: space-between;
+    padding: 5px;
+}
+.footer{
+    width: 100%;
+    height: 60px;
+    background-color: black;
+    color: white;
+    justify-content: space-between;
+    text-align: center;
+    gap: 100px;
+
 }
